Adjust footer h3 font size and fix margin and padding of the footer to align it

--- a/stylesheets/_footer.scss
+++ b/stylesheets/_footer.scss
@@ -3,7 +3,7 @@
 footer {
   margin-top: auto;
   background-color: v.$secondary;
-  padding: 5em 0 0.625em;
+  padding: 5.5em 0 0.625em;
   font-size: 1em;
   color: v.$color;
   text-align: center;
