--- a/stylesheets/_media_queries.scss
+++ b/stylesheets/_media_queries.scss
@@ -98,9 +98,9 @@ main .about img {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: -4rem;
+      margin-bottom: -3.5em;
       h3 {
-        width: 120px;
+        width: 6.666em;
       }
     }
   }
