--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -975,11 +975,15 @@ main section.contact {
   padding: 12px 20px;
   border-radius: 7px;
   position: relative;
-  margin: 1rem auto -5rem;
+  margin: 1em auto -5.5em;
   text-align: center;
   width: clamp(260px, 80%, 940px);
   position: relative;
   z-index: 1;
+}
+main section.contact h3 {
+  font-size: 1.5em;
+  margin: 1rem 0;
 }
 main section.contact a {
   display: inline-block;
@@ -998,7 +1002,7 @@ main section.contact a:hover {
 footer {
   margin-top: auto;
   background-color: var(--old-lavender);
-  padding: 5em 0 0.625em;
+  padding: 5.5em 0 0.625em;
   font-size: 1em;
   color: var(--isabelline);
   text-align: center;
@@ -1212,10 +1216,10 @@ footer small a:focus-visible {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    margin-bottom: -4rem;
+    margin-bottom: -3.5em;
   }
   main section.contact h3 {
-    width: 120px;
+    width: 6.666em;
   }
 }
 @media (min-width: 58.75rem) {
